-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.8.0-beta1
-
None
-
7a8eef1f1eef7375d5dcce68ad78161660ef152e
E.g. open projects A and B, start debugging for project A, open a file from project B and try to set a breakpoint.
Expected: A breakpoint is set in the file from project B
Actual: The breakpoint is added to the list of breakpoints for the running debugger for project A, and is not visible in the editor for the file from project B
| For Gerrit Dashboard: QTCREATORBUG-21361 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 243430,3 | Debugger: use requested file and line for pending breakpoints | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |